--- a/hugo/config.toml
+++ b/hugo/config.toml
@@ -1,3 +1,5 @@
+publishDir   = "../public"
+
 ######################## default configuration ####################
 baseURL = "https://examplesite.com"
 languageCode = "en-us"
@@ -39,21 +41,21 @@ disqusShortname = ""
   [[params.plugins.js]]
   URL = "plugins/search/search.js"
 
-  
+
 ############################## navigation ###############################
 [menu]
-  
+
   # main menu
   [[menu.main]]
   name = "About"
   URL = "about"
   weight = 1
-  
+
   [[menu.main]]
   name = "Post"
   URL = "blog"
   weight = 2
-  
+
   [[menu.main]]
   name = "Contact"
   URL = "contact"
@@ -64,12 +66,12 @@ disqusShortname = ""
   name = "About"
   URL = "about"
   weight = 1
-  
+
   [[menu.footer]]
   name = "Post"
   URL = "blog"
   weight = 2
-  
+
   [[menu.footer]]
   name = "Contact"
   URL = "contact"
