--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,6 @@
-# [build]
-#   publish = "exampleSite/public"
-#   command = "cd exampleSite && hugo --gc --themesDir ../.."
+[build]
+  publish = "public"
+  command = "cd hugo && hugo --gc --minify && cd .."
 
-# [build.environment]
-#   HUGO_VERSION = "0.73.0"
-#   HUGO_THEME = "repo"
-#   HUGO_BASEURL = "/"
+[build.environment]
+  HUGO_VERSION = "0.73.0"
