--- a/hugo/config.toml
+++ b/hugo/config.toml
@@ -75,7 +75,7 @@ author      = "Ryan Smith"
 mobile      = "949-232-0216"
 email       = "rms1000watt@gmail.com"
 location    = "Southern California"
-copyright   = "| copyright &copy; 2020 Ryan Smith) All Rights Reserved |"
+copyright   = "| copyright &copy; 2020 Ryan Smith |"
 
 googleAnalitycsID = "Your ID"
 
