--- a/hugo/config.toml
+++ b/hugo/config.toml
@@ -37,13 +37,13 @@ home = ["HTML", "RSS", "JSON"]
 
 [menu]
 
-  [[menu.main]]
-  name   = "About"
-  URL    = "about"
-  weight = 1
+  # [[menu.main]]
+  # name   = "About"
+  # URL    = "about"
+  # weight = 1
 
   [[menu.main]]
-  name   = "Post"
+  name   = "Blog"
   URL    = "blog"
   weight = 2
 
@@ -52,13 +52,13 @@ home = ["HTML", "RSS", "JSON"]
   URL    = "contact"
   weight = 3
 
-  [[menu.footer]]
-  name   = "About"
-  URL    = "about"
-  weight = 1
+  # [[menu.footer]]
+  # name   = "About"
+  # URL    = "about"
+  # weight = 1
 
   [[menu.footer]]
-  name   = "Post"
+  name   = "Blog"
   URL    = "blog"
   weight = 2
 
@@ -74,7 +74,7 @@ description = "This is meta description"
 author      = "Ryan Smith"
 mobile      = "949-232-0216"
 email       = "rms1000watt@gmail.com"
-location    = "Southern California"
+location    = "Irvine, CA"
 copyright   = "| copyright &copy; 2020 Ryan Smith |"
 
 googleAnalitycsID = "Your ID"
@@ -88,8 +88,8 @@ googleAnalitycsID = "Your ID"
 
   [params.newsletter]
   enable = true
-  title = "Join Our Newsletter"
-  content = "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero"
+  title = "Stay in Touch"
+  content = "If you'd like to stay up to date with new posts here, please share your email address to recieve updates on new content!"
 
   [[params.social]]
   title = "twitter"
